--- a/first.html
+++ b/first.html
@@ -8,7 +8,7 @@
 
 <h1>김도헌's 홈페이지</h1>
 <p>대학교 신입생 SW교육</p>
-<a href="https://www.example.com">Example.com으로 가기</a>
+<a href="https://www.naver.com">NAVER</a>
 <img src="image.png" alt="이미지 설명">
 <a href="body.html" class="button">body.html로 이동</a>
 <ul>
